# 410P-project

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  quotes.json
.sqlx/: query-17a42204ee668eddd2f18b50b4b38fb17510363f2184c9498a46ad15952aa195.json  query-497dabb8f55d28a826f3945af49d13193afb709b9223927dd1d7eb31b30efec3.json  query-955701eb20edd39a8e2832b3614b317ac73b0cbad25e6fb4305aae10ed7745c6.json
assets/static/: style.css
assets/templates/: index.html
db/: quotes.db  quotes.db-shm  quotes.db-wal
migrations/: 0001_create_quote_tables.down.sq  0001_create_quote_tables.up.sql
src/: api.rs  error.rs  main.rs  quote.rs  templates.rs  web.rs
